welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: method finTest has return statement; needs result type
    return true
    ^SnakeBuggle:18: error: method finTest has return statement; needs result type
  }else{return false}
        ^SnakeBuggle:19: error: method finTest has return statement; needs result type
	return false
        ^